# matig

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  builtin-functions.cc  doxygen.conf  environment.cc  environment.hh  expression.cc  expression.hh  function.hh  main.cc  test.l
src/: builtin-functions.cc  common.hh  environment.cc  environment.hh  error.hh  eval.cc  eval.hh  expression.cc  expression.hh  function.cc  function.hh  main.cc  print.cc  print.hh  read.cc  read.hh
